# repo-swarm

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_VERIFICATION_REPORT.md  README.md  TDD_TEST_RESULTS.md  TEST_COVERAGE_SUMMARY.md  mise.toml  pyproject.toml
.beads/: issues.jsonl
.cursor/commands/: openspec-archive.md  openspec-proposal.md
.opencode/command/: openspec-proposal.md
.trunk/: trunk.yaml
docs/: AUTH_VERIFICATION_CHECKLIST.md  GITHUB_TOKEN_MIGRATION.md  GITHUB_TOKEN_TROUBLESHOOTING.md  github-token-diagnostics-summary.md
docs/implementation/: SECTIONS-7-8-FINAL-SUMMARY.md  git-manager-token-validation-refactor.md  github-token-diagnostics-analysis.md  github-token-manual-testing-coverage.md  github-token-openspec-validation-summary.md  github-token-sections-7-8-completion-summary.md  github-token-security-review.md  github-token-test-suite-backward-compatibility-analysis.md  github-token-test-suite-recommendations.md  parallel-execution-plan.md  test-factory-pattern-update-plan.md  token-detection-tests-summary.md  (+1 more)
openspec/: project.md
prompts/: repos.json
scratchpad/: cl-3.2-backward-compatibility-verification.md  cl-8.2-completion-summary.md  final-commit-plan.md  oauth-token-research.md  parallel-agent-deployment-summary.md  test-suite-update-summary.md
scripts/: check_claude_auth.py  diagnose_token.py  full.sh  hello.sh  investigate-single.sh  investigate.sh  kill.sh  list.sh  single.sh  test_auth_flows.py  test_auth_performance.py  update_env_example.py  update_repos.py  verify_config.py  workflow.sh
src/: worker.py
(+45 files in other folders)
